--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">´
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <title>Form Validation</title>
 </head>
@@ -14,32 +14,62 @@
       <!-- Full Name -->
       <div class="form-group">
         <label for="name">Full Name</label>
-        <input type="text" id="name" placeholder="Full Name">
+        <input
+          type="text" 
+          id="name" 
+          placeholder="Full Name"
+          required
+          minlength="3"
+          maxlength="100">
       </div>
       <!-- Phone Number -->
       <div class="form-group">
         <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" placeholder="555-555-5555">
+        <input
+          type="tel" 
+          id="phone" 
+          placeholder="555-555-5555"
+          required
+          pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
       </div>
       <!-- Email Address -->
       <div class="form-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="email@address.com">
+        <input
+          type="email" 
+          id="email" 
+          placeholder="email@address.com"
+          required>
       </div>
       <!-- Website URL -->
       <div class="form-group">
         <label for="website">Website URL</label>
-        <input type="url" id="website" placeholder="https://domain.com">
+        <input
+          type="url" 
+          id="website" 
+          placeholder="https://domain.com"
+          required>
       </div>
       <!-- Password -->
       <div class="form-group">
         <label for="password1">Password</label>
-        <input type="password" id="password1" placeholder="Create Password">
+        <input
+          type="password" 
+          id="password1" 
+          placeholder="Create Password (min. 8 characters)"
+          required
+          pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+          title="please include at least 1 uppercase character, 1 lowercase character, and 1 number">
       </div>
       <!-- Confirm Password -->
       <div class="form-group">
         <label for="password2">Confirm Password</label>
-        <input type="password" id="password2" placeholder="Confirm Password">
+        <input
+          type="password" 
+          id="password2" 
+          placeholder="Confirm Password"
+          required
+          pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$">
       </div>
       <button type="submit">Register</button>
     </form>
