--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <label for="name">Full Name</label>
         <input
           type="text" 
+          name="name"
           id="name" 
           placeholder="Full Name"
           required
@@ -26,7 +27,8 @@
       <div class="form-group">
         <label for="phone">Phone Number</label>
         <input
-          type="tel" 
+          type="tel"
+          name="phone"
           id="phone" 
           placeholder="555-555-5555"
           required
@@ -37,6 +39,7 @@
         <label for="email">Email Address</label>
         <input
           type="email" 
+          name="email"
           id="email" 
           placeholder="email@address.com"
           required>
@@ -45,7 +48,8 @@
       <div class="form-group">
         <label for="website">Website URL</label>
         <input
-          type="url" 
+          type="url"
+          name="website"
           id="website" 
           placeholder="https://domain.com"
           required>
@@ -54,7 +58,7 @@
       <div class="form-group">
         <label for="password1">Password</label>
         <input
-          type="password" 
+          type="password"
           id="password1" 
           placeholder="Create Password (min. 8 characters)"
           required
@@ -65,7 +69,8 @@
       <div class="form-group">
         <label for="password2">Confirm Password</label>
         <input
-          type="password" 
+          type="password"
+          name="password"
           id="password2" 
           placeholder="Confirm Password"
           required
